Fix pflegetipps Body Overflow

--- a/style/scss/partials/pflegetipps.scss
+++ b/style/scss/partials/pflegetipps.scss
@@ -1,6 +1,5 @@
 .page-pflegetipps {
     position: relative;
-    width: 100vw;
     background-color: $background-lightgrey;
 
     .page-pflegetipps-inner {
